# g4_sipm_scintillator

./: CMakeLists.txt  DrawHist.cpp  DrawSignal.cpp  README.md  main.cc
include/: Analysis.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh
macros/: vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc
